Bug 438146 - Notification applet is no longer the first applet in system tray
Summary: Notification applet is no longer the first applet in system tray
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 5.22.0
Platform: Other Linux
: VHI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-06-06 08:16 UTC by Kai Uwe Broulik
Modified: 2021-06-07 15:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2021-06-06 08:16:00 UTC
SUMMARY
The notification applet is no longer sorted as the first applet in System Tray but rather sorted with the rest of the applets/SNIs.

STEPS TO REPRODUCE
1. Get a notification, let it expire, or just open the hidden items popup

OBSERVED RESULT
Notification bell randomly in the middle of System Tray

EXPECTED RESULT
Notification bell as the first icon in System Tray


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master as of 2021-06-05

Looks like the implementation in SortedSystemTrayModel::lessThanSystemTray is incorrect or there is some other bug
Comment 1 Kai Uwe Broulik 2021-06-06 08:18:45 UTC
Ah, yeah, it compares left index against left index.. would have made a patch but GitLab is down again
Comment 2 Bug Janitor Service 2021-06-06 08:25:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/917
Comment 3 Kai Uwe Broulik 2021-06-06 09:20:31 UTC
Git commit 6c4cc076769d61fd3df036af0e979b7a1b3d08f1 by Kai Uwe Broulik.
Committed on 06/06/2021 at 08:17.
Pushed by broulik into branch 'master'.

[System Tray] Fix typo breaking sorting notification applet first
FIXED-IN: 5.22.1

M  +1    -1    applets/systemtray/sortedsystemtraymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/6c4cc076769d61fd3df036af0e979b7a1b3d08f1
Comment 4 Kai Uwe Broulik 2021-06-06 09:21:10 UTC
Git commit b8512b9b03ac7957b2de393161bd81ac5935fb6f by Kai Uwe Broulik.
Committed on 06/06/2021 at 09:21.
Pushed by broulik into branch 'Plasma/5.22'.

[System Tray] Fix typo breaking sorting notification applet first
FIXED-IN: 5.22.1


(cherry picked from commit 6c4cc076769d61fd3df036af0e979b7a1b3d08f1)

M  +1    -1    applets/systemtray/sortedsystemtraymodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/b8512b9b03ac7957b2de393161bd81ac5935fb6f