[System Tray] Fix typo breaking sorting notification applet first

BUG: 438146
FIXED-IN: 5.22.1


(cherry picked from commit 6c4cc076769d61fd3df036af0e979b7a1b3d08f1)